# Data-Annotation-Qualification-Problem

./: README.md  credentials.json  main.py  pyproject.toml  service-account.json
